# deepdog_lite2

./: README.md
navigation_rui_ws-master/: .gitignore  Readme.org
navigation_rui_ws-master/src/control/: CMakeLists.txt  package.xml
navigation_rui_ws-master/src/control/launch/: location.launch
navigation_rui_ws-master/src/control/rviz/: file.rviz  odom.rviz
navigation_rui_ws-master/src/control/scripts/: get_now_point.py  multi_goal.py  now_points.csv
navigation_rui_ws-master/src/control/scripts/points/: cone2.csv  cone3.csv  corner.csv  corner.csv.1  last.csv  start_point.csv  stop_point.csv
navigation_rui_ws-master/src/control/src/: control_node.cpp
